--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,25 @@ click==8.1.7
 colored==2.2.4
 cryptography==42.0.8
 docutils==0.21.2
+exceptiongroup==1.2.1
 fledgling==0.0.1
 idna==3.7
+iniconfig==2.0.0
 jieba==0.42.1
 lockfile==0.12.2
+packaging==24.1
+pluggy==1.5.0
 prompt-toolkit==1.0.14
 pycparser==2.22
-Pygments==2.18.0
+pygments==2.18.0
 PyInquirer==1.0.3
+pytest==8.2.2
 python-daemon==3.0.1
 regex==2024.5.15
 requests==2.32.3
 six==1.16.0
 tabulate==0.9.0
+tomli==2.0.1
 urllib3==2.2.2
 wcwidth==0.2.13
 xdg==6.0.0
